overflow bug fix

--- a/styles.css
+++ b/styles.css
@@ -14,5 +14,9 @@
 }
 
 body {
+    position:relative;
+    overflow-x: hidden;
+}
+html {
     overflow-x: hidden;
 }
